# workflow

./: .gitignore  LICENSE  Makefile  main.py  pyproject.toml  upload_log.py
.github/workflows/: build.yml
src/steps/s01_initialize/: __init__.py  s01_initialize.py
src/steps/s02_fetch_devio/: __init__.py  s02_fetch_devio.py
src/steps/s03_fetch_notion/: __init__.py  s03_fetch_notion.py
src/steps/s04_upload/: __init__.py  s04_upload.py
src/upload_log/: __init__.py  upload_log.py
src/utils/: variables.py
src/utils/interval_http_client/: __init__.py  interval_http_client.py
src/utils/logger/: __init__.py  create_logger.py  logging_function.py
src/utils/methods/: __init__.py  create_key_build_data.py  create_key_master_data.py
src/utils/models/: __init__.py  author.py  environment_variables.py  master_data.py  meta_post.py  post.py
src/utils/models/build_data/: __init__.py  build_data.py  card.py
src/utils/notion/: __init__.py  create_notion_client.py
