[project]
name = "workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-lambda-powertools==3.23.0",
    "boto3==1.42.4",
    "boto3-stubs[s3]==1.42.4",
    "httpx==0.28.1",
    "notion-client==2.7.0",
    "orjson==3.11.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipython>=9.8.0",
    "isort>=7.0.0",
]
ipython = [
    "ipython>=9.8.0",
]

[tool.isort]
profile = "black"
